--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Anton";
-  src: URL("./assets/anton.ttf") format("truetype");
+  src: url("./assets/anton.ttf") format("truetype");
 }
 
 :root {
